# deep-learning-creation-from-zero

./: 2_5_xor.py  3_2_relu_plot.py  3_2_step_func.py  3_2_step_func_plot.py  3_4_three_layers_nn.py  4_3_numerical_diff.py  4_4_gradient.py  4_4_simplenet.py  4_5_two_layer_net.py  5_4_mul_and_add_layer.py  5_5_activation_layer.py  5_6_affine_and_softmax.py  5_7_neural_network.py  6_1_sgd.py  LICENSE  pyproject.toml
