[tool.poetry]
name = "deep-learning-creation-from-zero"
version = "0.1.0"
description = ""
authors = ["Shu Ogawara <shu.ogawara@linkers.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
